--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,16 @@
       "src": "/(.*)",
       "dest": "main.py"
     }
-  ]
+  ],
+  "functions": {
+    "main.py": {
+      "maxDuration": 60
+    },
+    "api/*.py": {
+      "maxDuration": 60
+    },
+    "src/api/*.py": {
+      "maxDuration": 60
+    }
+  }
 }
